correcting plugin filename in adding js

--- a/example/priceList.html
+++ b/example/priceList.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="style/style.css">
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <!-- Подключаем js с классом калькулятора стоимости -->
-<script type="text/javascript" src="js/сostDeterminant.class.js"></script>
+<script type="text/javascript" src="js/costDeterminant.class.js"></script>
 <!-- Подключаем js с функциями-обработчиками для работы калькулятора -->
 <script type="text/javascript" src="usage_example/calculator.funcs.js"></script>
 </head>
